# game-of-life

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake-toolchains/: Toolchain-mingw32.cmake
src/: board.cpp  board.hpp  graphics.cpp  graphics.hpp  main.cpp  main.hpp  utils.hpp
